Fix footer aligment on firefox and explorer

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,7 +48,6 @@ app-root {
 }
 .router-container {
   padding-bottom: 200px; //remove footer height
-  height: 100%;
   .columns-8 &,
   .columns-4 & {
     padding-bottom: 368px;
